...
import pt.isel.pdm.chimp.R
import pt.isel.pdm.chimp.domain.Either
import pt.isel.pdm.chimp.domain.Failure
import pt.isel.pdm.chimp.domain.wrappers.password.PasswordValidationError
import pt.isel.pdm.chimp.ui.components.Errors

const val PASSWORD_TEXT_FIELD_TEST_TAG = "password_text_field"
const val SHOW_BUTTON_TEST_TAG = "show_button"

@Composable
fun PasswordTextField(
    modifier: Modifier = Modifier,
    password: TextFieldValue,
    onPasswordChange: (TextFieldValue) -> Unit,
...
