...
import pt.isel.pdm.chimp.ui.components.inputs.PasswordTextField
import pt.isel.pdm.chimp.ui.components.inputs.TokenTextField
import pt.isel.pdm.chimp.ui.components.inputs.validateToken
import pt.isel.pdm.chimp.ui.theme.ChIMPTheme

const val REGISTER_VIEW_TEST_TAG = "register_view"
const val REGISTER_BUTTON_TEST_TAG = "register_button"
const val NAVIGATE_TO_LOGIN_TEST_TAG = "navigate_to_login"

@Composable
fun RegisterView(
    usernameInitialValue: String = "",
    emailInitialValue: String = "",
    passwordInitialValue: String = "",
...
